toolchains/typescript/tests/snapshots/sync_project_test__sync_project__route_out_dir_to_cache__adds_when_has_options.snap
---
source: toolchains/typescript/tests/sync_project_test.rs
expression: "fs::read_file(sandbox.path().join(\"with-options/tsconfig.json\")).unwrap()"
---
{
  "extends": "../tsconfig.options.json",
  "compilerOptions": {
    "target": "es2020",
    "outDir": "../.moon/cache/types/with-options"
  }
}
