toolchains/typescript/tests/snapshots/sync_project_test__sync_project__route_out_dir_to_cache__adds_when_no_options.snap
---
source: toolchains/typescript/tests/sync_project_test.rs
expression: "fs::read_file(sandbox.path().join(\"no-options/tsconfig.json\")).unwrap()"
---
{
  "compilerOptions": {
    "outDir": "../.moon/cache/types/no-options"
  }
}
