toolchains/typescript/tests/snapshots/sync_project_test__sync_project__route_out_dir_to_cache__overrides_out_dir.snap
---
source: toolchains/typescript/tests/sync_project_test.rs
expression: "fs::read_file(sandbox.path().join(\"out-dir/tsconfig.json\")).unwrap()"
---
{
  "compilerOptions": {
    "outDir": "../.moon/cache/types/out-dir"
  }
}
